Fix width of content on narrow displays

--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -1,5 +1,11 @@
+@media only screen and (orientation: landscape) and (min-width: 900px) {
+    .post {
+        max-width: 900px !important;
+    }
+}
+
 .post {
-    max-width: 900px;
+    max-width: 100%;
 }
 
 .post-title h1 {
@@ -43,7 +49,7 @@
 }
 
 .clickable-image {
-    max-width: 90%;
+    max-width: 80%;
     max-height: 600px;
     display: block;
     margin: 0 auto;
@@ -54,6 +60,5 @@
     max-width: 100%;
     max-height: 600px;
     display: block;
-    margin: 0 auto;
     border-radius: 5px;
 }
